--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca = neighborhoods.append(\"la\")"
+    "la_boca = neighborhoods[-1]"
    ]
   },
   {
